Adiciona target='_blank' aos links do Instagram e Facebook

--- a/pagina/produtos.html
+++ b/pagina/produtos.html
@@ -244,8 +244,8 @@
             <p class="text-blue-200 mb-8 max-w-md mx-auto">Criando memórias eternas através de histórias que transformam gerações.</p>
             
             <div class="flex justify-center gap-6 mb-8">
-                <a href="https://www.instagram.com/herdeirosdapromessa.t/" class="hover:text-brand-gold transition-colors"><i data-lucide="instagram" class="w-6 h-6"></i></a>
-                <a href="https://www.facebook.com/profile.php?id=61584457560182" class="hover:text-brand-gold transition-colors"><i data-lucide="facebook" class="w-6 h-6"></i></a>
+                 <a href="https://www.instagram.com/herdeirosdapromessa.t/" target="_blank" class="hover:text-brand-gold transition-colors"><i data-lucide="instagram" class="w-6 h-6"></i></a>
+                 <a href="https://www.facebook.com/profile.php?id=61584457560182" target="_blank" class="hover:text-brand-gold transition-colors"><i data-lucide="facebook" class="w-6 h-6"></i></a>
                 <a href="mailto:ternarius.lf@gmail.com" class="hover:text-brand-gold transition-colors"><i data-lucide="mail" class="w-6 h-6"></i></a>
             </div>
             
