--- a/404.html
+++ b/404.html
@@ -9,6 +9,25 @@
   <style>
     body { font-family: 'Nunito', system-ui, -apple-system, 'Segoe UI', Roboto, 'Helvetica Neue', Arial; background:#FDFBF7; }
   </style>
+  <script>
+    tailwind.config = {
+      theme: {
+        extend: {
+          colors: {
+            'brand-gold': '#F2C94C',
+            'brand-gold-dark': '#D4AF37',
+            'brand-blue': '#2D5B87',
+            'brand-cream': '#FDFBF7',
+            'brand-text': '#4A4A4A',
+          },
+          fontFamily: {
+            serif: ['Lora', 'serif'],
+            sans: ['Nunito', 'sans-serif'],
+          }
+        }
+      }
+    }
+  </script>
 </head>
 <body class="min-h-screen flex items-center justify-center p-6">
   <main class="max-w-xl text-center bg-white rounded-2xl shadow-lg p-10 border border-gray-100">
@@ -18,8 +37,16 @@
     <p class="text-gray-600 mb-6">Clique no botão abaixo para voltar à nossa página de produtos.</p>
 
     <div class="flex justify-center gap-4">
-      <a href="/produtos" class="bg-brand-blue text-white px-6 py-3 rounded-full font-semibold hover:bg-blue-800 transition">Ir para Produtos</a>
+      <a href="/produtos" class="bg-blue-700 text-white px-6 py-3 rounded-full font-semibold hover:bg-blue-800 transition">Ir para Produtos</a>
       <a href="/" class="border border-gray-200 px-6 py-3 rounded-full text-gray-700 hover:bg-gray-50 transition">Ir para Início</a>
+    </div>
+
+    <div class="mt-6">
+      <div class="flex justify-center gap-6 mb-4">
+        <a href="https://www.instagram.com/herdeirosdapromessa.t/" target="_blank" class="hover:text-brand-gold transition-colors"><i data-lucide="instagram" class="w-6 h-6"></i></a>
+        <a href="https://www.facebook.com/profile.php?id=61584457560182" target="_blank" class="hover:text-brand-gold transition-colors"><i data-lucide="facebook" class="w-6 h-6"></i></a>
+        <a href="mailto:ternarius.lf@gmail.com" class="hover:text-brand-gold transition-colors"><i data-lucide="mail" class="w-6 h-6"></i></a>
+      </div>
     </div>
 
     <p class="text-xs text-gray-400 mt-6">Se você digitou o endereço manualmente, verifique se não há erros de digitação.</p>
