--- a/pagina/sobre_nos.html
+++ b/pagina/sobre_nos.html
@@ -8,8 +8,28 @@
   <link href="https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400;0,600;0,700;1,400&family=Nunito:wght@400;600;700&display=swap" rel="stylesheet">
   <script src="https://unpkg.com/lucide@latest"></script>
   <link rel="stylesheet" href="styles.css">
+  <script>
+    tailwind.config = {
+      theme: {
+        extend: {
+          colors: {
+            'brand-gold': '#F2C94C',
+            'brand-gold-dark': '#D4AF37',
+            'brand-blue': '#2D5B87',
+            'brand-cream': '#FDFBF7',
+            'brand-text': '#4A4A4A',
+          },
+          fontFamily: {
+            serif: ['Lora', 'serif'],
+            sans: ['Nunito', 'sans-serif'],
+          }
+        }
+      }
+    }
+  </script>
 </head>
 <body class="font-sans text-brand-text paper-texture overflow-x-hidden">
+
 
 <nav class="fixed w-full z-50 bg-brand-cream/90 backdrop-blur-sm shadow-sm py-4">
   <div class="container mx-auto px-6 flex justify-between items-center">
@@ -41,22 +61,81 @@
 <header class="relative min-h-[200px] flex items-center justify-center bg-gradient-to-b from-blue-900 to-brand-blue text-white pt-20 pb-12">
   <div class="container mx-auto px-6 text-center">
     <h1 class="font-serif text-4xl md:text-5xl font-bold mb-4">Sobre Nós</h1>
-    <p class="max-w-2xl mx-auto text-blue-100">(Conteúdo a ser adicionado.)</p>
+    <p class="max-w-2xl mx-auto text-blue-100">Nós acreditamos que a Bíblia é a maior carta de amor já escrita. Aqui buscamos apresentar a Palavra às crianças de forma suave, acolhedora e visualmente encantadora.</p>
   </div>
 </header>
 
 <main class="container mx-auto px-6 py-12">
-  <section class="fade-in-section">
-    <!-- Espaço para conteúdo estático que o usuário acrescentará posteriormente -->
+  <section class="fade-in-section max-w-3xl mx-auto space-y-6">
+    <p class="text-gray-700 leading-relaxed">
+      Este projeto nasceu de um desejo sincero: ajudar pais, avós e educadores a apresentarem a Palavra de Deus às crianças de uma maneira que toque o coração. Sabemos que o mundo de hoje é cheio de ruídos; nosso objetivo é oferecer momentos de paz, beleza e verdade através da leitura.
+    </p>
+
+    <h2 class="font-serif text-2xl text-brand-blue font-bold">Nossa Missão</h2>
+    <p class="text-gray-700 leading-relaxed">
+      Criar materiais — e-books, livros e conteúdos digitais — que não apenas contem uma história, mas que revelem quem Deus é. Cada ilustração em aquarela, cada frase e cada personagem é desenvolvido com três pilares fundamentais:
+    </p>
+
+    <ul class="list-disc ml-6 text-gray-700 space-y-2">
+      <li><strong>Fidelidade Bíblica:</strong> A Bíblia é nossa fonte primária e inegociável.</li>
+      <li><strong>Linguagem Acessível:</strong> Traduzimos verdades profundas para o universo infantil sem perder a essência.</li>
+      <li><strong>Beleza que Inspira:</strong> Acreditamos que a arte deve refletir a beleza do Criador, despertando imaginação e ternura.</li>
+    </ul>
+
+    <h2 class="font-serif text-2xl text-brand-blue font-bold">Por que "Herdeiros da Promessa"?</h2>
+    <p class="text-gray-700 leading-relaxed">
+      Porque cremos na promessa antiga, feita aos profetas e cumprida em Jesus: a de que Deus estaria conosco. Queremos que cada criança que leia nossos livros saiba que ela também faz parte dessa história e que Cristo está com elas em todos os momentos — na alegria, nas dúvidas e até no choro.
+    </p>
+
+    <h2 class="font-serif text-2xl text-brand-blue font-bold">O Que Você Encontra Aqui</h2>
+    <ul class="text-gray-700 list-inside space-y-2">
+      <li>📚 <strong>E-books Ilustrados</strong>: Histórias completas para ler no tablet, celular ou computador.</li>
+      <li>🖨️ <strong>Atividades e Impressos</strong>: Materiais prontos para imprimir e colorir.</li>
+      <li>✨ <strong>Inspiração</strong>: Conteúdos nas nossas redes sociais para fortalecer a fé da sua família.</li>
+    </ul>
   </section>
 </main>
 
 <footer class="bg-brand-blue text-white py-12 mt-12 border-t border-blue-800">
   <div class="container mx-auto px-6 text-center">
-    <p class="text-blue-200">&copy; 2025 Herdeiros da Promessa</p>
+    <h3 class="font-serif text-2xl font-bold mb-4">Herdeiros da Promessa</h3>
+    <p class="text-blue-200 mb-8 max-w-md mx-auto">Criando memórias eternas através de histórias que transformam gerações.</p>
+    
+    <div class="flex justify-center gap-6 mb-8">
+      <a href="https://www.instagram.com/herdeirosdapromessa.t/" target="_blank" class="hover:text-brand-gold transition-colors"><i data-lucide="instagram" class="w-6 h-6"></i></a>
+      <a href="https://www.facebook.com/profile.php?id=61584457560182" target="_blank" class="hover:text-brand-gold transition-colors"><i data-lucide="facebook" class="w-6 h-6"></i></a>
+      <a href="mailto:ternarius.lf@gmail.com" class="hover:text-brand-gold transition-colors"><i data-lucide="mail" class="w-6 h-6"></i></a>
+    </div>
+    
+    <p class="text-sm text-blue-300">
+      &copy; 2025 Herdeiros da Promessa. Todos os direitos reservados.
+    </p>
   </div>
 </footer>
 
-<script>lucide.createIcons();</script>
+</script>
+<script>
+  lucide.createIcons();
+
+  // Script de "Scroll Reveal" para tornar visível as seções com a classe .fade-in-section
+  document.addEventListener('DOMContentLoaded', () => {
+    const observerOptions = {
+      root: null,
+      rootMargin: '0px',
+      threshold: 0.08
+    };
+
+    const observer = new IntersectionObserver((entries, observerInstance) => {
+      entries.forEach(entry => {
+        if (entry.isIntersecting) {
+          entry.target.classList.add('is-visible');
+          observerInstance.unobserve(entry.target);
+        }
+      });
+    }, observerOptions);
+
+    document.querySelectorAll('.fade-in-section').forEach(el => observer.observe(el));
+  });
+</script>
 </body>
 </html>
