--- a/pagina/produtos.html
+++ b/pagina/produtos.html
@@ -41,33 +41,7 @@
 </head>
 <body class="font-sans text-brand-text paper-texture overflow-x-hidden">
 
-    <!-- Navegação Principal -->
-    <nav class="fixed w-full z-50 bg-brand-cream/90 backdrop-blur-sm shadow-sm py-4">
-        <div class="container mx-auto px-6 flex justify-between items-center">
-            <div class="flex items-center gap-2">
-                <i data-lucide="book-open" class="text-brand-gold-dark w-6 h-6"></i>
-                <a href="/produtos" class="font-serif font-bold text-xl text-brand-blue tracking-wide">Herdeiros da Promessa</a>
-            </div>
-
-            <div class="flex items-center gap-6">
-                <a href="/produtos" class="text-brand-blue hover:underline">Início</a>
-
-                <div class="relative group">
-                    <button class="flex items-center gap-2 text-brand-blue">
-                        Produtos
-                        <i data-lucide="chevron-down" class="w-4 h-4"></i>
-                    </button>
-                    <div class="absolute right-0 mt-2 w-56 bg-white rounded-md shadow-lg opacity-0 group-hover:opacity-100 pointer-events-none group-hover:pointer-events-auto transition-opacity">
-                        <a href="/historias_biblicas" class="block px-4 py-2 text-brand-blue hover:bg-gray-100">Histórias bíblicas</a>
-                        <a href="/ilustracoes_biblicas" class="block px-4 py-2 text-brand-blue hover:bg-gray-100">Ilustrações bíblicas</a>
-                    </div>
-                </div>
-
-                <a href="/sobre-nos" class="text-brand-blue hover:underline">Sobre nós</a>
-                <a href="/contato" class="text-brand-blue hover:underline">Contato</a>
-            </div>
-        </div>
-    </nav>
+    <div data-include="nav"></div>
 
     <!-- PARTE 1: Início / Hero Section -->
     <header class="relative min-h-screen flex items-center justify-center overflow-hidden bg-gradient-to-b from-blue-900 to-brand-blue text-white pt-20">
@@ -273,9 +247,24 @@
     </footer>
 
     <!-- Scripts de Funcionalidade -->
+    <script src="/pagina/js/load-nav.js"></script>
     <script>
         // Inicializa os ícones
         lucide.createIcons();
+
+        // Toggle do menu mobile
+        const mobileToggle = document.getElementById('mobile-menu-toggle');
+        const mobileMenu = document.getElementById('mobile-menu');
+        const menuOpenIcon = document.getElementById('menu-open');
+        const menuCloseIcon = document.getElementById('menu-close');
+
+        if (mobileToggle && mobileMenu) {
+            mobileToggle.addEventListener('click', () => {
+                mobileMenu.classList.toggle('hidden');
+                menuOpenIcon.classList.toggle('hidden');
+                menuCloseIcon.classList.toggle('hidden');
+            });
+        }
 
         // Script para gerar estrelas aleatórias no fundo do header
         document.addEventListener('DOMContentLoaded', () => {
