--- a/pagina/produtos.html
+++ b/pagina/produtos.html
@@ -154,7 +154,11 @@
                                 </a>
 
                                 <a href="https://drive.google.com/file/d/1YduedSeFQeXgBFhkUqgZZuyT7xnNqbcQ/view" target="_blank" class="w-full text-center bg-brand-gold text-blue-900 px-8 py-3 rounded-lg font-bold shadow-lg hover:bg-yellow-400 transition-all hover:shadow-xl transform hover:-translate-y-1">
-                                    Adquirir meu e-book gratuíto do mês!
+                                    Garantir meu e-book gratuíto do mês!
+                                </a>
+
+                                <a href="https://drive.google.com/file/d/1hJRzqHlgDdw-u1vlIaSBVU5ere4mR0Z8/view?usp=sharing" target="_blank" class="w-full text-center bg-green-600 text-white px-8 py-3 rounded-lg font-bold shadow-lg hover:bg-green-700 transition-all hover:shadow-xl transform hover:-translate-y-1">
+                                    Garantir o meu planner gratuíto!
                                 </a>
                             </div>
                         </div>
