--- a/pagina/contato.html
+++ b/pagina/contato.html
@@ -41,28 +41,28 @@
 
 <main class="container mx-auto px-6 py-12">
   <section class="max-w-2xl mx-auto bg-white p-8 rounded-xl shadow">
-    <form id="contactForm" class="space-y-4">
+    <form action="https://formsubmit.co/ternarius.lf@gmail.com" method="POST" id="contactForm" class="space-y-4">
       <div>
         <label class="block text-sm font-medium text-gray-700">Nome</label>
-        <input id="name" name="name" required class="mt-1 block w-full border-gray-200 rounded-md p-3" />
+        <input id="name" name="name" required class="mt-1 block w-full border-2 border-gray-300 rounded-md p-3 placeholder-gray-400 focus:outline-none focus:border-brand-blue focus:ring-2 focus:ring-brand-blue/30 transition-colors" placeholder="Seu nome" />
       </div>
 
       <div>
         <label class="block text-sm font-medium text-gray-700">Email</label>
-        <input id="email" name="email" type="email" required class="mt-1 block w-full border-gray-200 rounded-md p-3" />
+        <input id="email" name="email" type="email" required class="mt-1 block w-full border-2 border-gray-300 rounded-md p-3 placeholder-gray-400 focus:outline-none focus:border-brand-blue focus:ring-2 focus:ring-brand-blue/30 transition-colors" placeholder="seu@email.com" />
       </div>
 
       <div>
         <label class="block text-sm font-medium text-gray-700">Mensagem</label>
-        <textarea id="message" name="message" rows="6" required class="mt-1 block w-full border-gray-200 rounded-md p-3"></textarea>
+        <textarea id="message" name="message" rows="6" required class="mt-1 block w-full border-2 border-gray-300 rounded-md p-3 placeholder-gray-400 focus:outline-none focus:border-brand-blue focus:ring-2 focus:ring-brand-blue/30 transition-colors" placeholder="Digite sua mensagem aqui..."></textarea>
       </div>
 
       <div class="flex items-center gap-4">
-        <button type="submit" class="bg-brand-blue text-white px-6 py-3 rounded-md font-semibold">Enviar Mensagem</button>
-        <button type="button" id="clearBtn" class="border border-gray-200 px-4 py-2 rounded-md">Limpar</button>
+        <button type="submit" class="bg-brand-blue text-white px-6 py-3 rounded-md font-semibold hover:bg-blue-800 transition-colors">Enviar Mensagem</button>
+        <button type="reset" class="border-2 border-gray-300 px-4 py-2 rounded-md hover:bg-gray-50 transition-colors">Limpar</button>
       </div>
 
-      <p id="status" class="text-sm text-green-600 hidden">Mensagem enviada (simulada).</p>
+      <p id="status" class="text-sm text-green-600 hidden">Mensagem enviada com sucesso!</p>
     </form>
   </section>
 </main>
@@ -87,22 +87,17 @@
 <script>
   lucide.createIcons();
   document.getElementById('contactForm').addEventListener('submit', function(e){
-    e.preventDefault();
-    // Validação simples
+    // Validação simples antes de enviar
     const name = document.getElementById('name').value.trim();
     const email = document.getElementById('email').value.trim();
     const message = document.getElementById('message').value.trim();
     if(!name || !email || !message){
+      e.preventDefault();
       alert('Por favor preencha todos os campos.');
       return;
     }
     document.getElementById('status').classList.remove('hidden');
-    // Simula envio — aqui você pode integrar com uma API posteriormente
-    setTimeout(()=>{
-      document.getElementById('contactForm').reset();
-    }, 800);
   });
-  document.getElementById('clearBtn').addEventListener('click', ()=>document.getElementById('contactForm').reset());
 </script>
 
 <script src="/pagina/js/load-nav.js"></script>
