contato com código

--- a/pagina/contato.html
+++ b/pagina/contato.html
@@ -41,7 +41,7 @@
 
 <main class="container mx-auto px-6 py-12">
   <section class="max-w-2xl mx-auto bg-white p-8 rounded-xl shadow">
-    <form action="https://formsubmit.co/ternarius.lf@gmail.com" method="POST" id="contactForm" class="space-y-4">
+    <form action="https://formsubmit.co/0796b7c544f78a9b9a8a1e9e165e9852" method="POST" id="contactForm" class="space-y-4">
       <div>
         <label class="block text-sm font-medium text-gray-700">Nome</label>
         <input id="name" name="name" required class="mt-1 block w-full border-2 border-gray-300 rounded-md p-3 placeholder-gray-400 focus:outline-none focus:border-brand-blue focus:ring-2 focus:ring-brand-blue/30 transition-colors" placeholder="Seu nome" />
