--- a/pagina/historias_biblicas.html
+++ b/pagina/historias_biblicas.html
@@ -272,7 +272,7 @@
     </div>
 
     <a href="https://pay.cakto.com.br/3bnvjd5_668646" target="_blank" class="inline-block bg-brand-gold text-blue-900 px-12 py-5 rounded-xl font-bold text-xl hover:bg-yellow-400 transition-all shadow-2xl hover:shadow-3xl transform hover:-translate-y-1">
-      💎 Adquirir Pacote Completo com Desconto
+      💎 Adquirir Pacote Completo Por Apenas R$ 14,90
     </a>
     <p class="text-sm text-blue-200 mt-4">✅ Acesso imediato após a compra • 📧 Entrega por email • 💯 Garantia de satisfação</p>
   </section>
