Ajuste botao novo e paginad e vendas

--- a/pagina/historias_biblicas.html
+++ b/pagina/historias_biblicas.html
@@ -67,7 +67,7 @@
 
       <!-- Descrição e CTA -->
       <div class="w-full md:w-1/2">
-        <span class="inline-block bg-orange-100 text-orange-600 px-3 py-1 rounded-full text-sm font-bold mb-3">🎯 MAIS VENDIDO</span>
+        <span class="inline-block bg-orange-100 text-orange-600 px-3 py-1 rounded-full text-sm font-bold mb-3">🎯 APRENDIZADO PRECIOSO</span>
         <h2 class="font-serif text-4xl text-brand-blue font-bold mb-4">Histórias Bíblicas Ilustradas</h2>
         <p class="text-lg text-gray-700 mb-6 leading-relaxed">
           Desperte a imaginação dos seus filhos com histórias vibrantes do Antigo Testamento e andando com Jesus! Personagens bíblicos que ganham vida através de ilustrações encantadoras e textos fiéis às Escrituras.
@@ -86,9 +86,6 @@
         <div class="flex flex-col sm:flex-row gap-3">
           <a href="https://pay.cakto.com.br/3bnvjd5_668646" target="_blank" class="bg-brand-blue text-white px-8 py-4 rounded-xl font-bold text-center hover:bg-blue-800 transition-all shadow-lg hover:shadow-xl transform hover:-translate-y-1">
             🛒 Adquirir Agora
-          </a>
-          <a href="#comparacao" class="border-2 border-brand-blue text-brand-blue px-6 py-4 rounded-xl font-bold text-center hover:bg-blue-50 transition-all">
-            Ver Todas as Coleções
           </a>
         </div>
       </div>
