--- a/pagina/produtos.html
+++ b/pagina/produtos.html
@@ -153,6 +153,10 @@
                                     Adquira Todas as Coleções
                                 </a>
 
+                                <a href="/historias_biblicas" class="w-full text-center border-2 border-brand-blue text-brand-blue px-8 py-3 rounded-lg font-bold shadow-lg hover:bg-blue-50 transition-all hover:shadow-xl transform hover:-translate-y-1">
+                                    Saber Mais Sobre as Coleções
+                                </a>
+
                                 <a href="https://drive.google.com/file/d/1YduedSeFQeXgBFhkUqgZZuyT7xnNqbcQ/view" target="_blank" class="w-full text-center bg-brand-gold text-blue-900 px-8 py-3 rounded-lg font-bold shadow-lg hover:bg-yellow-400 transition-all hover:shadow-xl transform hover:-translate-y-1">
                                     Garantir meu e-book gratuíto do mês!
                                 </a>
@@ -233,7 +237,7 @@
                             </div>
 
                             <button type="button" disabled aria-disabled="true" title="Produto disponível em breve" class="w-full block text-center bg-gray-400 text-white px-8 py-4 rounded-xl font-bold text-lg opacity-80 cursor-not-allowed transition-all shadow-md">
-                                Quero Alfabetizar com a Bíblia
+                                Em breve! Alfabetizar com a Bíblia
                             </button>
                         </div>
                     </div>
