--- a/pagina/sobre_nos.html
+++ b/pagina/sobre_nos.html
@@ -91,27 +91,12 @@
 <script src="/pagina/js/load-nav.js"></script>
 <script>
   lucide.createIcons();
-  const observer = new IntersectionObserver((entries) => { entries.forEach(e => { if(e.isIntersecting) e.target.classList.add('is-visible'); }); }, {threshold:0.1});
+  const observer = new IntersectionObserver((entries) => { 
+    entries.forEach(e => { 
+      if(e.isIntersecting) e.target.classList.add('is-visible'); 
+    }); 
+  }, {threshold:0.1});
   document.querySelectorAll('.fade-in-section').forEach(s => observer.observe(s));
-</script>
-  document.addEventListener('DOMContentLoaded', () => {
-    const observerOptions = {
-      root: null,
-      rootMargin: '0px',
-      threshold: 0.08
-    };
-
-    const observer = new IntersectionObserver((entries, observerInstance) => {
-      entries.forEach(entry => {
-        if (entry.isIntersecting) {
-          entry.target.classList.add('is-visible');
-          observerInstance.unobserve(entry.target);
-        }
-      });
-    }, observerOptions);
-
-    document.querySelectorAll('.fade-in-section').forEach(el => observer.observe(el));
-  });
 </script>
 </body>
 </html>
