página gratuita exclusiva

--- a/pagina/produtos.html
+++ b/pagina/produtos.html
@@ -169,21 +169,9 @@
                         <div id="hist-dots" class="mt-3 flex gap-2 justify-center"></div>
 
                         <div class="mt-6">
-                            <div class="flex flex-col gap-4">
-                                <a href="https://pay.cakto.com.br/3bnvjd5_668646" target="_blank" class="w-full text-center bg-brand-blue text-white px-8 py-3 rounded-lg font-bold shadow-lg hover:bg-blue-800 transition-all hover:shadow-xl transform hover:-translate-y-1">
+                            <div class="flex justify-center">
+                                <a href="/historias_biblicas" class="w-full text-center bg-brand-blue text-white px-8 py-3 rounded-lg font-bold shadow-lg hover:bg-blue-800 transition-all hover:shadow-xl transform hover:-translate-y-1">
                                     Adquira Todas as Coleções
-                                </a>
-
-                                <a href="/historias_biblicas" class="w-full text-center border-2 border-brand-blue text-brand-blue px-8 py-3 rounded-lg font-bold shadow-lg hover:bg-blue-50 transition-all hover:shadow-xl transform hover:-translate-y-1">
-                                    Saber Mais Sobre as Coleções
-                                </a>
-
-                                <a href="https://drive.google.com/file/d/1YduedSeFQeXgBFhkUqgZZuyT7xnNqbcQ/view" target="_blank" class="w-full text-center bg-brand-gold text-blue-900 px-8 py-3 rounded-lg font-bold shadow-lg hover:bg-yellow-400 transition-all hover:shadow-xl transform hover:-translate-y-1">
-                                    Garantir meu e-book gratuíto do mês!
-                                </a>
-
-                                <a href="https://drive.google.com/file/d/1hJRzqHlgDdw-u1vlIaSBVU5ere4mR0Z8/view?usp=sharing" target="_blank" class="w-full text-center bg-green-600 text-white px-8 py-3 rounded-lg font-bold shadow-lg hover:bg-green-700 transition-all hover:shadow-xl transform hover:-translate-y-1">
-                                    Garantir o meu planner gratuíto!
                                 </a>
                             </div>
                         </div>
@@ -229,7 +217,7 @@
                     <p class="text-gray-600 text-lg mb-6 leading-relaxed">
                         Encante sua casa com lindas atividades bíblicas para seu filho pintar e se divertir. Arte que comunica a santidade e a beleza do Evangelho.
                     </p>
-                    <a href="https://pay.cakto.com.br/tmz5ezi_668607" target="_blank" class="inline-block bg-brand-gold text-blue-900 px-8 py-3 rounded-lg font-bold shadow-lg hover:bg-yellow-400 transition-all hover:shadow-xl transform hover:-translate-y-1">
+                    <a href="/ilustracoes_biblicas" class="inline-block bg-brand-gold text-blue-900 px-8 py-3 rounded-lg font-bold shadow-lg hover:bg-yellow-400 transition-all hover:shadow-xl transform hover:-translate-y-1">
                         Adquirir Coleção de Artes
                     </a>
                 </div>
