--- a/pagina/historias_biblicas.html
+++ b/pagina/historias_biblicas.html
@@ -83,8 +83,8 @@
           </ul>
         </div>
 
-        <div class="flex flex-col sm:flex-row gap-3">
-          <a href="https://pay.cakto.com.br/3bnvjd5_668646" target="_blank" class="bg-brand-blue text-white px-8 py-4 rounded-xl font-bold text-center hover:bg-blue-800 transition-all shadow-lg hover:shadow-xl transform hover:-translate-y-1">
+        <div class="flex justify-center">
+          <a href="#comparacao" class="bg-brand-blue text-white px-8 py-4 rounded-xl font-bold text-center hover:bg-blue-800 transition-all shadow-lg hover:shadow-xl transform hover:-translate-y-1">
             🛒 Adquirir Agora
           </a>
         </div>
@@ -132,8 +132,8 @@
           </ul>
         </div>
 
-        <div class="flex flex-col sm:flex-row gap-3">
-          <a href="https://pay.cakto.com.br/3bnvjd5_668646" target="_blank" class="bg-green-600 text-white px-8 py-4 rounded-xl font-bold text-center hover:bg-green-700 transition-all shadow-lg hover:shadow-xl transform hover:-translate-y-1">
+        <div class="flex justify-center">
+          <a href="#comparacao" class="bg-green-600 text-white px-8 py-4 rounded-xl font-bold text-center hover:bg-green-700 transition-all shadow-lg hover:shadow-xl transform hover:-translate-y-1">
             🛒 Quero Esta Coleção
           </a>
         </div>
@@ -190,8 +190,8 @@
           </div>
         </div>
 
-        <div class="flex flex-col sm:flex-row gap-3">
-          <a href="https://pay.cakto.com.br/3bnvjd5_668646" target="_blank" class="bg-purple-600 text-white px-8 py-4 rounded-xl font-bold text-center hover:bg-purple-700 transition-all shadow-lg hover:shadow-xl transform hover:-translate-y-1">
+        <div class="flex justify-center">
+          <a href="#comparacao" class="bg-purple-600 text-white px-8 py-4 rounded-xl font-bold text-center hover:bg-purple-700 transition-all shadow-lg hover:shadow-xl transform hover:-translate-y-1">
             🛒 Adquirir Coleção
           </a>
         </div>
@@ -233,8 +233,8 @@
           </ul>
         </div>
 
-        <div class="flex flex-col sm:flex-row gap-3">
-          <a href="https://pay.cakto.com.br/3bnvjd5_668646" target="_blank" class="bg-red-600 text-white px-8 py-4 rounded-xl font-bold text-center hover:bg-red-700 transition-all shadow-lg hover:shadow-xl transform hover:-translate-y-1">
+        <div class="flex justify-center">
+          <a href="#comparacao" class="bg-red-600 text-white px-8 py-4 rounded-xl font-bold text-center hover:bg-red-700 transition-all shadow-lg hover:shadow-xl transform hover:-translate-y-1">
             🎄 Garantir Minha Cópia
           </a>
         </div>
@@ -336,6 +336,17 @@
         if(document.getElementById(id)) nextSlide(id);
       });
     }, 4000);
+
+    // Scroll suave para links âncora
+    document.querySelectorAll('a[href^="#"]').forEach(anchor => {
+      anchor.addEventListener('click', function (e) {
+        e.preventDefault();
+        const target = document.querySelector(this.getAttribute('href'));
+        if (target) {
+          target.scrollIntoView({ behavior: 'smooth', block: 'center' });
+        }
+      });
+    });
   </script>
 </body>
 </html>
