Ajustes imagem, otimização de tamanho e carregamento

--- a/pagina/ilustracoes_biblicas.html
+++ b/pagina/ilustracoes_biblicas.html
@@ -48,10 +48,10 @@
       <div class="relative bg-gray-100">
         <div id="carousel-ilustracoes-1" class="relative h-[400px] md:h-[500px]">
           <div class="carousel-slide active flex items-center justify-center h-full p-4">
-            <img src="/pagina/files/ilustracoes_biblicas/livros_ilustrados/l1_herdeiros.png" alt="Herdeiros da Promessa" class="max-h-full max-w-full object-contain">
+            <img src="/pagina/files/ilustracoes_biblicas/livros_ilustrados/livro1_herdeiros.png" alt="Herdeiros da Promessa" class="max-h-full max-w-full object-contain">
           </div>
           <div class="carousel-slide hidden flex items-center justify-center h-full p-4">
-            <img src="/pagina/files/ilustracoes_biblicas/livros_ilustrados/colorindo com proposito.png" alt="Colorindo com Propósito" class="max-h-full max-w-full object-contain">
+            <img src="/pagina/files/ilustracoes_biblicas/livros_ilustrados/colorindo_com_proposito.png" alt="Colorindo com Propósito" class="max-h-full max-w-full object-contain">
           </div>
         </div>
         
