--- a/pagina/produtos.html
+++ b/pagina/produtos.html
@@ -89,13 +89,13 @@
                 <div class="w-full md:w-1/2 relative">
                     <div id="carousel-historias" class="relative overflow-hidden rounded-2xl shadow-2xl bg-gray-100">
                         <div class="carousel-slide active">
-                            <img src="/pagina/files/home/natal_capa.png" alt="O menino que mudou o mundo" class="w-full h-[400px] object-contain">
+                            <img src="/pagina/files/historias_biblicas/natal/o_menino_que_mudou_o_mundo_pt1.png" alt="O menino que mudou o mundo" class="w-full h-[400px] object-contain">
                         </div>
                         <div class="carousel-slide hidden">
-                            <img src="/pagina/files/historias_biblicas/tesouros_do_coracao/calminho.png" alt="Tesouros do Coração" class="w-full h-[400px] object-contain">
+                            <img src="/pagina/files/historias_biblicas/tesouros_do_coracao/caminho_no_coracao.png" alt="Tesouros do Coração" class="w-full h-[400px] object-contain">
                         </div>
                         <div class="carousel-slide hidden">
-                            <img src="/pagina/files/historias_biblicas/imaginando_juntos/imagin_juntos.png" alt="Imaginando Juntos" class="w-full h-[400px] object-contain">
+                            <img src="/pagina/files/historias_biblicas/imaginando_juntos/imaginando_juntos.png" alt="Imaginando Juntos" class="w-full h-[400px] object-contain">
                         </div>
                     </div>
                     <div class="flex justify-center gap-2 mt-4">
@@ -192,16 +192,19 @@
                 <div class="w-full md:w-1/2 relative">
                     <div id="carousel-ilustracoes" class="relative overflow-hidden rounded-2xl shadow-2xl bg-gray-100">
                         <div class="carousel-slide active">
-                            <img src="/pagina/files/home/ilustracoes_l1_capa.png" alt="Livro Ilustrado Herdeiros da Promessa" class="w-full h-[400px] object-contain">
+                            <img src="/pagina/files/ilustracoes_biblicas/livros_ilustrados/livro1_herdeiros.png" alt="Livro Ilustrado Herdeiros da Promessa" class="w-full h-[400px] object-contain">
                         </div>
                         <div class="carousel-slide hidden">
-                            <img src="/pagina/files/ilustracoes_biblicas/alfabeto biblico.png" alt="Alfabeto bíblico" class="w-full h-[400px] object-contain">
+                            <img src="/pagina/files/ilustracoes_biblicas/atividades_aprendizado/alfabeto_biblico.png" alt="Alfabeto bíblico" class="w-full h-[400px] object-contain">
                         </div>
                         <div class="carousel-slide hidden">
-                            <img src="/pagina/files/ilustracoes_biblicas/aprendendo com alegria.png" alt="Aprendendo com Alegria" class="w-full h-[400px] object-contain">
+                            <img src="/pagina/files/ilustracoes_biblicas/atividades_aprendizado/aprendendo_com_alegria.png" alt="Aprendendo com Alegria" class="w-full h-[400px] object-contain">
                         </div>
                         <div class="carousel-slide hidden">
-                            <img src="/pagina/files/ilustracoes_biblicas/biblia_em_cores/genesis/capa_genesis.png" alt="Gênesis" class="w-full h-[400px] object-contain">
+                            <img src="/pagina/files/ilustracoes_biblicas/livros_ilustrados/colorindo_com_proposito.png" alt="Colorindo com Propósito" class="w-full h-[400px] object-contain">
+                        </div>
+                        <div class="carousel-slide hidden">
+                            <img src="/pagina/files/ilustracoes_biblicas/biblia_em_cores/genesis/ilustrado_genesis.png" alt="Gênesis" class="w-full h-[400px] object-contain">
                         </div>
                     </div>
                     <div class="flex justify-center gap-2 mt-4">
@@ -234,7 +237,7 @@
                             <!-- Efeito de rotação suave no fundo -->
                             <div class="absolute inset-0 bg-brand-gold/20 rounded-full transform rotate-3 scale-105 z-0"></div>
                             <!-- SUBSTITUIR PELA IMAGEM: duvidas.jpg (Jesus pensando/ensinando) -->
-                            <img src="files/capa alfabe.png" alt="Alfabetização Bíblica" class="relative z-10 rounded-xl shadow-lg border-4 border-white mx-auto w-3/4 md:w-full">
+                            <img src="files/alfabetizacao/capa_alfabetizacao_em_breve.png" alt="Alfabetização Bíblica" class="relative z-10 rounded-xl shadow-lg border-4 border-white mx-auto w-3/4 md:w-full">
                         </div>
                     </div>
 
