--- a/pagina/historias_biblicas.html
+++ b/pagina/historias_biblicas.html
@@ -208,6 +208,9 @@
           <div class="carousel-slide active">
             <img src="/pagina/files/historias_biblicas/natal/o_menino_que_mudou_o_mundo_pt1.png" alt="Especial Natal 1" class="w-full h-[400px] object-contain">
           </div>
+          <div class="carousel-slide active">
+            <img src="/pagina/files/historias_biblicas/natal/o_menino_que_mudou_o_mundo_pt2.png" alt="Especial Natal 2" class="w-full h-[400px] object-contain">
+          </div>
         </div>
         <div class="flex justify-center gap-2 mt-4">
           <button onclick="prevSlide('carousel-4')" class="bg-white/90 p-2 rounded-full shadow-md hover:bg-white"><i data-lucide="chevron-left" class="w-5 h-5 text-brand-blue"></i></button>
