--- a/pagina/ilustracoes_biblicas.html
+++ b/pagina/ilustracoes_biblicas.html
@@ -121,11 +121,14 @@
       <div class="relative bg-gray-100">
         <div id="carousel-ilustracoes-2" class="relative h-[400px] md:h-[500px]">
           <div class="carousel-slide active flex items-center justify-center h-full p-4">
-            <img src="/pagina/files/ilustracoes_biblicas/atividades_aprendizado/alfabeto biblico.png" alt="Alfabeto bíblico" class="max-h-full max-w-full object-contain">
+            <img src="/pagina/files/ilustracoes_biblicas/atividades_aprendizado/alfabeto_biblico.png" alt="Alfabeto bíblico" class="max-h-full max-w-full object-contain">
           </div>
           <div class="carousel-slide hidden flex items-center justify-center h-full p-4">
-            <img src="/pagina/files/ilustracoes_biblicas/atividades_aprendizado/aprendendo com alegria.png" alt="Aprendendo com Alegria" class="max-h-full max-w-full object-contain">
-          </div>          
+            <img src="/pagina/files/ilustracoes_biblicas/atividades_aprendizado/aprendendo_com_alegria.png" alt="Aprendendo com Alegria" class="max-h-full max-w-full object-contain">
+          </div>
+          <div class="carousel-slide hidden flex items-center justify-center h-full p-4">
+            <img src="/pagina/files/ilustracoes_biblicas/atividades_aprendizado/caminhos_da_fe.png" alt="Caminhos da Fé" class="max-h-full max-w-full object-contain">
+          </div>           
         </div>
         
         <!-- Controles do Carrossel -->
@@ -194,13 +197,7 @@
       <div class="relative bg-gray-100">
         <div id="carousel-ilustracoes-3" class="relative h-[400px] md:h-[500px]">
           <div class="carousel-slide active flex items-center justify-center h-full p-4">
-            <img src="/pagina/files/ilustracoes_biblicas/biblia_em_cores/genesis/capa_genesis.png" alt="Gênesis" class="max-h-full max-w-full object-contain">
-          </div>
-          <div class="carousel-slide hidden flex items-center justify-center h-full p-4">
-            <img src="/pagina/files/ilustracoes_biblicas/biblia_em_cores/genesis/capa_genesis.png" alt="Gênesis" class="max-h-full max-w-full object-contain">
-          </div>
-          <div class="carousel-slide hidden flex items-center justify-center h-full p-4">
-            <img src="/pagina/files/ilustracoes_biblicas/biblia_em_cores/genesis/capa_genesis.png" alt="Gênesis" class="max-h-full max-w-full object-contain">
+            <img src="/pagina/files/ilustracoes_biblicas/biblia_em_cores/genesis/ilustrado_genesis.png" alt="Gênesis" class="max-h-full max-w-full object-contain">
           </div>
         </div>
         
