--- a/pagina/historias_biblicas.html
+++ b/pagina/historias_biblicas.html
@@ -93,7 +93,7 @@
         </div>
         <div class="p-6">
           <p class="text-gray-700 mb-4 leading-relaxed">
-            Uma história emocionante que mostra como pequenas atitudes de fé e amor podem transformar vidas e tocar corações.
+            Uma história emocionante sobre o nascimento de Jesus, contada de forma cativante para crianças, destacando o impacto eterno que Ele trouxe ao mundo e o verdadeiro significado do natal.
           </p>
           <div class="flex items-center gap-2 text-sm text-gray-600 mb-4">
             <i data-lucide="heart" class="w-4 h-4"></i>
